# dl-nzb

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml  config.toml.backup  test.nzb  test2.nzb  test_download_100MB.nzb  test_minimal.nzb
.claude/: settings.local.json
.github/workflows/: release.yml
src/: cli.rs  config.rs  downloader.rs  error.rs  lib.rs  main.rs  nntp.rs  nzb.rs  post_process.rs  progress.rs
src/download/: downloader.rs  mod.rs  nzb.rs
src/nntp/: connection.rs  mod.rs  pool.rs
src/processing/: mod.rs  par2.rs  par2_ffi.rs  par2repairer.cpp  post_process.rs
