[package]
name = "dl-nzb"
version = "0.1.0"
edition = "2021"

[profile.release]
# Optimize for size and performance
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size
strip = true        # Remove debug symbols

[dependencies]
# Async runtime and networking
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# Connection pooling
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = { version = "0.14", features = ["toml"] }

# File formats
quick-xml = { version = "0.31", features = ["serialize"] }
nzb-rs = { version = "0.5.6", features = ["serde"] }
yenc = "0.2"  # Updated to latest version

# HTTP client (for future features)
reqwest = { version = "0.11", features = ["stream"] }

# Async utilities
futures = "0.3"
bytes = "1.5"
pin-project = "1.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress and UI
indicatif = "0.17"
human-bytes = "0.4"

# System utilities
dirs = "5.0"
base64 = "0.21"
regex = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Post-processing dependencies
which = "6.0"
tempfile = "3.0"
unrar = "0.5"
