[package]
name = "dl-nzb"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["Zeph <zeph@example.com>"]
description = "A fast, modern NZB downloader with built-in PAR2 repair and RAR extraction"
readme = "README.md"
homepage = "https://github.com/zephleggett/dl-nzb"
repository = "https://github.com/zephleggett/dl-nzb"
license = "GPL-2.0"
keywords = ["nzb", "usenet", "downloader", "nntp", "par2"]
categories = ["command-line-utilities", "network-programming"]

[lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"

[lib]
name = "dl_nzb"
path = "src/lib.rs"

[[bin]]
name = "dl-nzb"
path = "src/main.rs"

[profile.release]
# Optimize for size and performance
opt-level = "z"     # Optimize for size
lto = "fat"         # Full Link Time Optimization across all crates
codegen-units = 1   # Better optimization (slower compile, faster runtime)
panic = "abort"     # Smaller binary size
strip = true        # Remove debug symbols

# Fast release build for development/testing
[profile.release-fast]
inherits = "release"
opt-level = 3       # Maximum speed optimization
lto = "thin"        # Faster LTO, good balance

[features]
# Enable vendored OpenSSL for cross-compilation
vendored-openssl = ["openssl/vendored"]

[dependencies]
# OpenSSL (explicit dependency for vendored feature support)
openssl = { version = "0.10", optional = false }
# Async runtime and networking
tokio = { version = "1.45", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-native-tls = "0.3"
native-tls = "0.2"

# Connection pooling
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# File formats
nzb-rs = { version = "0.5", features = ["serde"] }

# Async utilities
futures = "0.3"
bytes = "1.10"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress and UI
indicatif = "0.17"
human_bytes = "0.4"

# System utilities
dirs = "5.0"
regex = "1.11"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Post-processing dependencies
tempfile = "3.20"
unrar = "0.5"

# PAR2 support (pure Rust with SIMD optimizations)
par2-rs = { path = "../par2-rs" }
